# redwood

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: compare.py
redwood/: Cargo.toml  README.md  build.rs
redwood/resources/test/: sample_pred.txt  sample_pred2.txt  sample_train.txt  sample_train2.txt
redwood/src/: avx_convert.s  data.rs  f16.rs  forest.rs  lib.rs  prediction.rs  score.rs  tree.rs  types.rs
redwood_cli/: Cargo.toml  README.md
redwood_cli/src/: main.rs
