[package]
name = "redwood"
version = "0.1.0"
authors = ["Michael Benfield <mike.benfield@gmail.com>"]
build = "build.rs"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/mikebenfield/redwood"
homepage = "https://github.com/mikebenfield/redwood"
keywords = ["decision", "random", "forest", "classification", "regression"]
categories = ["algorithms", "science"]
description = """
A fast decision forest library.
"""

[features]
asm = []
default = ["asm"]

[dependencies]
failure = "0.1.2"
rand = "0.5.5"
crossbeam-utils = "0.5"

[build-dependencies]
cc = "1.0.17"
